--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,5 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+/d:/WORKSPACE/FlashCraft/0010 PCB/__Previews
+/d:/WORKSPACE/FlashCraft/0010 PCB/History
