--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,5 @@ cython_debug/
 .pypirc
 /d:/WORKSPACE/FlashCraft/0010 PCB/__Previews
 /d:/WORKSPACE/FlashCraft/0010 PCB/History
+/d:/WORKSPACE/FlashCraft/0010 PCB/History
+/d:/WORKSPACE/FlashCraft/0010 PCB/__Previews
