--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,5 @@ cython_debug/
 /d:/WORKSPACE/FlashCraft/0010 PCB/History
 /d:/WORKSPACE/FlashCraft/0010 PCB/History
 /d:/WORKSPACE/FlashCraft/0010 PCB/__Previews
+/d:/WORKSPACE/FlashCraft/0010 PCB/History
+/d:/WORKSPACE/FlashCraft/0010 PCB/__Previews
