library and components update.

--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,12 @@ cython_debug/
 /d:/WORKSPACE/FlashCraft/0010 PCB/__Previews
 /d:/WORKSPACE/FlashCraft/0010 PCB/History
 /d:/WORKSPACE/FlashCraft/0010 PCB/__Previews
+/d:/WORKSPACE/FlashCraft/0010 PCB/History
+/d:/WORKSPACE/FlashCraft/0010 PCB/__Previews
+/d:/WORKSPACE/FlashCraft/0010 PCB/History/FFFFFFFFF3AD15E3
+/d:/WORKSPACE/FlashCraft/0010 PCB/History/FFFFFFFFF3AD15E3/DATABASE.~(4).DbLib.Zip
+/d:/WORKSPACE/FlashCraft/0010 PCB/History/AutoProgramCircuit.~(7).SchDoc.Zip
+/d:/WORKSPACE/FlashCraft/0010 PCB/History/ConnectorsCircuit.~(9).SchDoc.Zip
+/d:/WORKSPACE/FlashCraft/0010 PCB/History/ConnectorsCircuit.~(10).SchDoc.Zip
+/d:/WORKSPACE/FlashCraft/0010 PCB/History/FT2232Circuit.~(4).SchDoc.Zip
+/d:/WORKSPACE/FlashCraft/0010 PCB/Project Logs for FlashCraft
