--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,6 @@ cython_debug/
 /d:/WORKSPACE/FlashCraft/0010 PCB/History/ConnectorsCircuit.~(10).SchDoc.Zip
 /d:/WORKSPACE/FlashCraft/0010 PCB/History/FT2232Circuit.~(4).SchDoc.Zip
 /d:/WORKSPACE/FlashCraft/0010 PCB/Project Logs for FlashCraft
+/d:/WORKSPACE/FlashCraft/0010 PCB/__Previews
+/d:/WORKSPACE/FlashCraft/0010 PCB/History
+/d:/WORKSPACE/FlashCraft/0010 PCB/Project Logs for FlashCraft
